src/snapshot_middleware/snapshots/librojo__snapshot_middleware__project__test__no_name_project.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: true
  glob_ignored_children: false
  instigating_source:
    Path: /foo/default.project.json5
  relevant_paths:
    - /foo/default.project.json5
  context: {}
  specified_id: ~
  middleware: ~
  schema: ~
name: foo
class_name: Model
properties: {}
children: []
