src/snapshot_middleware/snapshots/librojo__snapshot_middleware__project__test__project_path_property_overrides.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: true
  glob_ignored_children: false
  instigating_source:
    Path: /foo/default.project.json5
  relevant_paths:
    - /foo/other.project.json5
    - /foo/default.project.json5
  context: {}
  specified_id: ~
  middleware: project
  schema: ~
name: path-property-override
class_name: StringValue
properties:
  Value:
    String: Changed
children: []
