src/snapshot_middleware/snapshots/librojo__snapshot_middleware__project__test__project_with_children.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: true
  glob_ignored_children: false
  instigating_source:
    Path: /foo.project.json5
  relevant_paths:
    - /foo.project.json5
  context: {}
  specified_id: ~
  middleware: ~
  schema: ~
name: children
class_name: Folder
properties: {}
children:
  - snapshot_id: "00000000000000000000000000000000"
    metadata:
      ignore_unknown_instances: true
      glob_ignored_children: false
      instigating_source:
        ProjectNode:
          path: /foo.project.json5
          name: Child
          node:
            $className: Model
          parent_class: Folder
      relevant_paths: []
      context: {}
      specified_id: ~
      middleware: ~
      schema: ~
    name: Child
    class_name: Model
    properties: {}
    children: []
