src/snapshot_middleware/snapshots/librojo__snapshot_middleware__project__test__project_with_path_to_txt.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  glob_ignored_children: false
  instigating_source:
    Path: /foo/default.project.json5
  relevant_paths:
    - /foo/other.txt
    - /foo/other.meta.json5
    - /foo/default.project.json5
  context: {}
  specified_id: ~
  middleware: text
  schema: ~
name: path-project
class_name: StringValue
properties:
  Value:
    String: "Hello, world!"
children: []
