src/snapshot_middleware/snapshots/librojo__snapshot_middleware__project__test__project_with_unresolved_properties.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: true
  glob_ignored_children: false
  instigating_source:
    Path: /foo.project.json5
  relevant_paths:
    - /foo.project.json5
  context: {}
  specified_id: ~
  middleware: ~
  schema: ~
name: unresolved-properties
class_name: StringValue
properties:
  Value:
    String: Hi!
children: []
